[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

[project]
name = "gedi_canopy_height"
version = "1.0.1"
description = "generates rasters of canopy height from the Global Ecosystem Dynamics Investigation (GEDI) mission"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "rasters"
]

requires-python = ">=3.10"

[tool.setuptools.package-data]
gedi_canopy_height = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/gedi_canopy_height"

